mule-user-guide/v/3.3/adding-business-logic-to-a-flow.adoc
= Adding Business Logic to a Flow

In this example, we show you how to use a Component to plug custom logic into your Mule Flows. We create a Java Hello component that takes an input name and says hello, demonstrating how your code can interact with a flow. A link:https://docs.mulesoft.com/mule-user-guide/v/3.3/configuring-components[component] in Mule is simply a POJO (Plain Old Java Object) that implements some logic on the data it receives and usually returns data to pass to the next step in the flow. You can write Components in Java or in other languages, such as Groovy, Ruby, Python, Scala, Closure, or JavaScript.

== What You Will Learn

* How to create a Java Component in Mule Studio
* How to configure the component in the flow
* How Mule knows what method to call when invoking your component

== Build It Now! _(10 minutes!)_

=== Prerequisites

This examples adds a new flow to the existing 'core-concepts' project created in the link:https://docs.mulesoft.com/mule-user-guide/v/3.3/configuring-an-endpoint[Configuring an Endpoint] example.

=== Building the Example

. First, let's create our custom Java component. For those familiar with Eclipse, the process is the same for creating Java classes in Studio. Create a package in the _src/main/java_ folder and name it _org.mule.examples.hello_:
+
image:studioMakeNewPackage.png[studioMakeNewPackage]

. Now create a new Java Class by right clicking on the package you just created:
+
image:studioMakeNewClass.png[studioMakeNewClass]

. This will open up a dialog box with lots of options, all you need to do is give the class a name, _HelloComponent_.
+
image:studioNameNewClass.png[studioNameNewClass]

. The class has been created so we're going to add a single method to it called _sayHello_. This method takes a single String argument.
+
image:studioSayHelloCode.png[studioSayHelloCode]

. We're ready to create our new flow. Right click on the project tree and select New --> Mule Flow. When the New Mule Flow dialog appears, enter _hello_ as the name and click Finish.
+
image:studioMakeNewFlow.png[studioMakeNewFlow]

. Now drag a HTTP endpoint and a Java component from the palette onto the canvas. It should look like this:
+
image:studioAddJavaComponent.png[studioAddJavaComponent]

. Double click on the HTTP endpoint to edit its properties. set the host to _localhost_ and the port to _8082_
+
[TIP]
====
*Choosing a port number*

Note that the port for this connector is 8082 not 8081 as in the previous examples. This is because we added this flow to our existing project and when it starts both the _echo_ and _hello_ flows will be loaded; a port conflict would happen if both flows listened on the same port.
====
+
image:studioConfigureComponent.png[studioConfigureComponent]

. Next, double click on the component to edit its properties. In the _Display name_ field, enter _Hello_. In the _Class name_ field, enter _org.mule.examples.hello.HelloComponent_.
+
image:studioConfigureComponent.png[studioConfigureComponent]

. In the same dialog, click on the Documentation tab in the component properties dialog and give the component a description. Click OK.
+
image:studioConfigureEndpointDoc.png[studioConfigureEndpointDoc]

== Running the Example

[start="10"]
. To run the example, right click the flow, _hello.mflow_, in the project tree, select Run As.. --> Mule Application. You'll see logging information in the console window as the application starts.

. In a browser window goto http://localhost:8082/Fred and you should see the following on screen:
+
image:studioBrowserOutput.png[studioBrowserOutput]

=== What Just Happened?

* You created a Java Component (a POJO) and plugged it into a Flow.
* The Java Component got invoked via an HTTP request.
* The Component didn't need to know anything about where the data came from or where it was going. Mule has a clean separation of endpoints and components.

=== How did Mule Know the Method to Invoke?

In Mule the method invoked on a component is called an _EntryPoint_. Mule invokes the _EntryPoint_ method when an endpoint receives data, using _EntryPointResolvers_ to figure out which EntryPoint method to invoke. Resolvers vary according to the type of data received and the methods on the component. A resolver can be based on annotations, interface, pre-defined, or dynamic data. In this instance Mule used a dynamic resolver since the request was a single string and the _sayHello_ method accepted a single String. Mule matches the resolver to the method's parameter data. The link:https://docs.mulesoft.com/mule-user-guide/v/3.3/invoking-component-methods[Invoking Component Methods] tutorial covers this topic, providing more information about components and entry points.

== References

* link:https://docs.mulesoft.com/mule-user-guide/v/3.3/configuring-components[Mule Components]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.3/configuring-java-components[Configuring Java Components]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.3/developing-components[EntryPoint Resolvers]

== Next Steps

Next: link:https://docs.mulesoft.com/mule-user-guide/v/3.3/adding-message-processors-to-a-flow[Adding Message Processors to a Flow]

Previous: link:https://docs.mulesoft.com/mule-user-guide/v/3.3/configuring-an-endpoint[Configuring an Endpoint]
